# GroceryMate

./: README.md
backend/: .gitignore  Makefile  README.md  database.py  main.py  pyproject.toml
backend/crud/: shopping_list.py
backend/models/: shopping_list.py
backend/routers/: shopping_list.py
backend/schemas/: shopping_list.py
dbt/: README.md
dbt/grocery_mate/: dbt_project.yml
dbt/scripts/: create_dummy_data.py  create_tables.py  pyproject.toml
