[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["idenrai <geniuskwon966@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
duckdb = "^1.1.0"
pydantic = "^2.9.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
mypy = "^1.11.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
